fixed z-index thing with the h1

--- a/app.css
+++ b/app.css
@@ -1,5 +1,3 @@
-
-
 html,body{
   width: 100%;
   height: 100%;
@@ -36,7 +34,7 @@ h1 {
 	top: 10px;
 	padding: 10px;
 	background: white;
-	z-index: 10;
+	z-index: 1000;
 	margin: 0;
 	font-family: sans-serif;
 }
